# bne_extension

./: .gitignore  background.js  content.css  content.js  db.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js
backend/: main.py  pyproject.toml
